no entiendo por que hay que cambiar a otro archivo y borrar el primero

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -15,20 +15,177 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import os\n",
-                "from bs4 import BeautifulSoup\n",
+                "pip install pandas requests lxml"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "import requests\n",
-                "import time\n",
+                "from bs4 import BeautifulSoup\n",
+                "import pandas as pd\n",
                 "import sqlite3\n",
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
+                "import io\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "\n",
+                "\n",
+                "url = \"https://en.wikipedia.org/wiki/List_of_Spotify_streaming_records\"\n",
+                "\n",
+                "headers = {\n",
+                "    \"User-Agent\": \"Mozilla/5.0 (compatible; DataScienceProject/1.0; +https://example.com)\"\n",
+                "}\n",
+                "\n",
+                "response = requests.get(url, headers=headers)\n",
+                "\n",
+                "response.raise_for_status()\n",
+                "\n",
+                "print(\"Status:\", response.status_code)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "\n",
+                "html = io.StringIO(response.text) #esto ha salido del solucionario, no se que es pero funciona.\n",
+                "\n",
+                "tables = pd.read_html(html)\n",
+                "print(f\"{len(tables)} tables were found.\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "\n",
+                "df = tables[0]  # Extract the first table from the 27 found\n",
+                "df.head()  # Display the first 5 rows"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df.columns"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df = df.drop(100)\n",
+                "df\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df[\"Release date\"] = pd.to_datetime(df[\"Release date\"], errors=\"coerce\")\n",
+                "df[\"Streams (billions)\"] = df[\"Streams (billions)\"].astype(float)\n",
+                "df\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "conn = sqlite3.connect(\"spotify_top_songs.db\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df.to_sql(\"most_streamed\", conn, if_exists=\"replace\", index=False)\n",
+                "cursor = conn.cursor()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cursor.execute(\"SELECT COUNT(*) FROM most_streamed\")\n",
+                "print(\"Rows inserted:\", cursor.fetchone()[0])\n",
+                "\n",
+                "conn.commit()\n",
+                "conn.close()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "df\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import sqlite3\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "#TOP 10 STREAMED SONGS\n",
+                "\n",
+                "SELECT *\n",
+                "FROM df\n",
+                "ORDER BY \"Streams (billions)\" DESC\n",
+                "LIMIT 10;\n",
                 "\n"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -44,12 +201,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.4"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
